Courses/20240624/Templates/Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /app1
        pathType: Prefix
        backend:
          service:
            name: thetest-service
            port:
              number: 80
      - path: /app2
        pathType: Prefix
        backend:
          service:
            name: thetest2-service
            port:
              number: 80
