Courses/20240624/Templates/Ingress/ingress_elastic.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-elastic
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /elastic(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: elastic-service
            port:
              number: 9200
